--- a/pages/consult/consultlist/consultlist.wxss
+++ b/pages/consult/consultlist/consultlist.wxss
@@ -198,13 +198,14 @@ picker{
 }
 .plan{
   width:100%;
-  padding:10rpx 0;
+  padding:15rpx 0;
   font-size:28rpx;
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   border-top:1rpx solid #EEEEEE;
+  position: relative;
 }
 .plan-left{
   width:82%;
@@ -222,3 +223,28 @@ picker{
   position:fixed;
   top:0;
 } */
+.gd_batch{
+  margin-right: 20rpx;
+  border: 1px solid #F36C70;
+  border-radius: 5rpx;
+  background-color: #FEF0F0;
+  color: #F66C6B;
+  position: absolute;
+  top:15rpx;
+  right: 20rpx;
+}
+.gd_schedule{
+  text-align: center;
+}
+.gd_schedule_text{
+  width: 20%;
+  display: inline-block;
+  padding: 10rpx 0;
+  border-bottom: solid #ddd 1px;
+}
+.gd_font-color{
+  color: #777;
+}
+.gd_border{
+  border-bottom: none;
+}
