--- a/pages/intelligence/result/content/content.wxml
+++ b/pages/intelligence/result/content/content.wxml
@@ -148,6 +148,10 @@
 				</view>
 			</view>
 		</block>
+    <view style='padding:10px; color:#fa2131;'>
+      <view style='font-size:12px; margin-left:15rpx;'>“ 0 ”：数据未更新</view>
+      <view style='font-size:12px; margin-left:15rpx;'>“ - ”：当前年度无计划</view>
+    </view>
     <!-- <view class="page__bd page__bd_spacing">
         <view class="weui-flex">
             <view class="weui-flex__item">
