--- a/pages/school/schoolcontent/schoolcontent.wxml
+++ b/pages/school/schoolcontent/schoolcontent.wxml
@@ -240,6 +240,13 @@
             </block> 
             <!-- 理科结束   -->
             <button style='width:30%;margin-bottom:20rpx;' class="weui-btn" type="primary" bindtap='test'>咨询专家</button>
+            <block wx:if="{{Wen.length != 0 || Li.length != 0}}">
+              <view style='padding:10px; color:#fa2131;'>
+                <view style='font-size:12px; margin-left:15rpx;'>“ 0 ”：数据未更新</view>
+                <view style='font-size:12px; margin-left:15rpx;'>“ - ”：当前年度无计划</view>
+              </view>
+            </block>
+            
           </view>
     </view>
     <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
@@ -285,9 +292,5 @@
                 <view class=''>2016年招生计划：{{item.ENTERCOUNT}}人</view>
             </view> 
         </view>  -->
-        </view>
-        <view>
-          <view style='font-size:12px; margin-left:15rpx;color:#888'>“ 0 ”：数据未更新</view>
-          <view style='font-size:12px; margin-left:15rpx;color:#888'>“ - ”：当前年度无计划</view>
         </view>
 <view class="lines"></view>
