--- a/pages/teacher/issue_content/issue_content.wxml
+++ b/pages/teacher/issue_content/issue_content.wxml
@@ -19,6 +19,9 @@
 									<view>{{item.NICKNAME_STU}}  <text class='time'>{{item.CREATETIME}}</text></view>
 								</view>
 							</view>
+              <view class='gd_problem'>
+                  <view>问题</view>
+              </view>
 						</view>
           </view>
           <view class="weui-media-box weui-media-box_text">
@@ -35,9 +38,15 @@
 										style="width: 50rpx;height: 50rpx;margin-right: 5px;border-radius:50%"/>
 								</view>
 								<view class="weui-cell__bd weui-cell_primary">
-									<view>{{item.NICKNAME_PRO}}  <text class='time'>{{item.CREATETIME}}</text></view>
+									<view>{{item.NICKNAME_PRO}}<text class='time'>{{item.CREATETIME}}</text></view>
 								</view>
 							</view>
+              <view style='margin-left:88rpx;margin-top:-10rpx;color:#999;'>
+                  <text>铭邦升学规划研究院专家</text>
+              </view>
+              <view class='gd_answer' style='margin-left:30rpx;'>
+                  <text>回答</text>
+              </view>
 						</view>
 					</view>
 					<view class="weui-media-box weui-media-box_text" style='margin-left: 30rpx;'>
