--- a/pages/person/information/information.wxml
+++ b/pages/person/information/information.wxml
@@ -53,6 +53,25 @@
 		</view>
   </view>
 </view>
+<view class="weui-cell weui-cell_select">
+    <view class="weui-cell__hd weui-cell__hd_in-select-after">
+        <view class="weui-label">本科批次</view>
+    </view>
+    <view class="weui-cell__bd">
+        <picker bindchange="bindCountryChange" name="COUNTRYINDEX" value="{{countryIndex}}" range="{{countries}}">
+            <view class="weui-select weui-select_in-select-after">{{countries[countryIndex]}}</view>
+        </picker>
+    </view>
+</view>
+<view class="weui-cells weui-cells_after-title">
+	<view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+		<view class="weui-cell__hd"></view>
+		<view class="weui-cell__bd weui-cell_primary">
+			<text>线差分</text>
+			<input type='text' name='DIFFERENCE' value='{{difference}}'style="text-align:right"/>
+		</view>
+  </view>
+</view>
 	<view class="weui-btn-area">
   	<button class="weui-btn" type="primary" form-type='submit'>完成</button>
   </view>
