--- a/pages/teacher/teacher.wxml
+++ b/pages/teacher/teacher.wxml
@@ -17,12 +17,14 @@
       </view>
       <view class="weui-tab__panel">
         <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
-          <view class='page_head'>
-            <view class='head_right' bindtap="quiz">
-              <image src="/images/pen.png" style="width:40rpx;height:40rpx;"></image>
-              <text class='quiz'>提问</text>
+          <block wx:if="{{role=='sja4gc59bg'}}">
+            <view class='page_head'>
+              <view class='head_right' bindtap="quiz">
+                <image src="/images/pen.png" style="width:40rpx;height:40rpx;"></image>
+                <text class='quiz'>提问</text>
+              </view>
             </view>
-          </view>
+          </block>
           <view class="weui-panel weui-panel_access">
             <view class="weui-panel__bd">
 							<view class="weui-media-box weui-media-box_text" wx:for="{{result}}" wx:key="" hidden="{{item.checked}}">
