--- a/pages/teacher/introduce/introduce.wxml
+++ b/pages/teacher/introduce/introduce.wxml
@@ -12,17 +12,17 @@
                 <view class="weui-media-box__title">{{item.NICKNAME}}<text class='atte'>认证</text></view>
                 <view class="weui-media-box__desc">
                   <view class='teacher-item'>
-                    <text>10年</text>
+                    <text>5年以上</text>
                     <text>工作年限</text>
                   </view>
                   <!-- <view class='teacher-item'>
                     <text>456</text>
                     <text>服务人数</text>
                   </view> -->
-                  <view class='teacher-item'>
+                  <!-- <view class='teacher-item'>
                     <text>{{item.PRICE}}</text>
                     <text>服务金额</text>
-                  </view>
+                  </view> -->
                 </view>
             </view>
         </view>
