--- a/pages/news/newscontent/newscontent.wxss
+++ b/pages/news/newscontent/newscontent.wxss
@@ -3,7 +3,8 @@
  @import "../../../wxParse/wxParse.wxss";
 .content{
   width:94%;
-  margin:3% 3% 0 3%;
+  padding:3% 3% 0 3%;
+  background-color: #fff;
   font-size:28rpx;
 }
 .heads{
