--- a/pages/person/information/information.wxml
+++ b/pages/person/information/information.wxml
@@ -2,8 +2,8 @@
 <view class="page">
 <!-- title -->
 	<view class="page__hd">
-		<view class="page__title">考生信息</view>
-		<view class="page__desc">student</view>
+		<view style='font-size:18px;'>考生信息</view>
+		<!-- <view class="page__desc">student</view> -->
 	</view>
 <form bindsubmit='formSubmit'>
 <view class="weui-cells weui-cells_after-title">
