--- a/pages/person/information/information.wxss
+++ b/pages/person/information/information.wxss
@@ -21,3 +21,8 @@
 	margin-top: 0;
 	letter-spacing: 1px;
 }
+.page__hd{
+  padding: 10px 0px 10px 0px;
+  text-align: center;
+  background-color: #fff;
+}
