--- a/pages/person/security/phone/phone.wxml
+++ b/pages/person/security/phone/phone.wxml
@@ -3,8 +3,8 @@
 <view class='page'>
 <!-- title -->
 	<view class="page__hd">
-		<view class="page__title">绑定手机</view>
-		<view class="page__desc">phone</view>
+		<view style='font-size:18px;'>绑定手机</view>
+		<!-- <view class="page__desc">phone</view> -->
 	</view>
 <form bindsubmit="formSubmit">
 <view class="page__bd">
